--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "notion-next",
-  "version": "4.8.4",
-  "homepage": "https://github.com/tangly1024/NotionNext.git",
+  "name": "阿泽の小宇宙",
+  "version": "6.6.6",
+  "homepage": "https://aze66.top",
   "license": "MIT",
   "repository": {
     "type": "git",
